fixed the same spacing issue I was having on the Harmony stylesheet.

--- a/app/styles/las-brisas.scss
+++ b/app/styles/las-brisas.scss
@@ -10,6 +10,11 @@ Las Brisas page styling
 
 
 
+.las-brisas-container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 
 /** Project Title **/
 .brisas-title {
